WIP horizontal scroll bug

--- a/style.css
+++ b/style.css
@@ -17,11 +17,14 @@
     padding: 0;
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 body {
     background-color: var(--color-bg);
     color: var(--color-text);
     font-family: "Montserrat", 'sans-serif';
-    overflow-x: hidden;
 }
 
 a {
@@ -63,7 +66,6 @@ nav {
     border-radius: 10px;
     padding-right: 10px;
     align-items: center;
-    /* height: 50vh; */
     list-style-type: none;
     transition: all .5s;
 
